--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+body {margin: 0}
 .page {
     min-width: 1100px;
     /* we don't know how to make mobile versions of websites yet, */
@@ -14,6 +15,20 @@
     min-height: 600px;
     max-height: 756px;
     /* parameters for the header section */
+    background-color: #F2F2F2;
+    display: flex;
+}
+
+.logo_place_header {
+  position: absolute;
+  left: 64px;
+  top: 30px;
+}
+
+.header__title {
+  font-size: 102px;
+  line-height: 96px;
+  width: 730px;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
