--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@ body {margin: 0}
     background-color: #F2F2F2;
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
 }
 
 .logo_place_header {
@@ -68,6 +67,38 @@ body {margin: 0}
   position: absolute;
   bottom: 0px;
   z-index: 1;
+}
+
+.description {
+  margin: 100px 0px;
+  width: 80%;
+}
+/*p {
+  border: red 2px dashed;
+} */
+.two-columns {
+  min-width: 784px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.two-columns__brief {
+  font-size: 18px;
+  line-height: 1.2;
+  color: #2F80ED;
+  width: 175px;
+  margin-right: 30px;
+}
+
+.two-columns__main-text {
+  width: 784px;
+
+}
+
+.two-columns__paragraph {
+  font-size: 24px;
+  line-height: 34px;
 }
 
 /* including elements with key-value modifiers */
