--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,117 @@ body {margin: 0}
   line-height: 34px;
 }
 
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits__title {
+  width: 60%;
+  line-height: 69px;
+  font-size: 60px;
+  font-style: bold;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.digits__subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-style: bold;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 60px;
+}
+
+.table {
+  margin: auto;
+  display: table;
+  table-layout: auto;
+}
+
+.table__cell {
+  /*border: red 2px dashed;*/
+  width: 250px;
+  margin: 0 12.5px;
+  padding: 0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.table__top-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.table__bottom-row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 100px;
+}
+
+.feynman {
+  background-color: #F2F2F2;
+  width: 100%;
+  height: 890px;
+}
+
+.feynman__title {
+  width: 775px;
+  margin: auto;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 70px;
+  line-height: 1.15;
+  font-size: 120px;
+  position: absolute;
+  left: 25.5%;
+  top: 2150px;
+  z-index: 10;
+}
+
+.feynman__subtitle {
+  margin: auto;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  position: absolute;
+  left: 37%;
+  top: 2575px;
+  z-index: 5;
+}
+
+.feynman__more {
+  line-height: 51px;
+  font-size: 36px;
+  text-decoration: none;
+  position: absolute;
+  top: 2600px;
+  right: 48px;
+  color: black;
+}
+
+.feynman__image {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 80px;
+  top: 2400px;
+  z-index: 1;
+}
+
+
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
     width: 200px;
