--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
-body {margin: 0}
+.body {
+  margin: 0;
+}
 .page {
     min-width: 1100px;
     /* we don't know how to make mobile versions of websites yet, */
@@ -17,37 +19,48 @@ body {margin: 0}
     /* parameters for the header section */
     background-color: #F2F2F2;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    position: relative;
+    overflow: hidden;
 }
 
-.logo_place_header {
-  position: absolute;
-  left: 64px;
-  top: 30px;
+.header__left {
+  margin-left: 64px;
+}
+
+.header__logo_top {
+  width: 154px;
+  height: 31px;
+  margin-top: 30px;
+  margin-left: 64px;
 }
 
 .header__title {
+  width: 730px;
   font-size: 102px;
   line-height: 96px;
-  width: 730px;
+  z-index: 4;
   margin-left: 64px;
+  font-weight: bold;
 }
+
 
 .header__subtitle {
   width: 388px;
-  margin-left: 64px;
-  margin-bottom: 0;
+  line-height: 25px;
+  font-size: 18px;
   position: absolute;
-  bottom: 55px;
+  bottom: 30px;
+  z-index: 2;
+  margin-left: 64px;
 }
 
 .header__link {
   text-decoration: none;
   color: #2F80ED;
-  margin-left: 64px;
-  margin-top: 0;
-  position: absolute;
-  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
@@ -56,161 +69,256 @@ body {margin: 0}
     width: 568px;
     background-color: #2F80ED;
     position: absolute;
-    right: 0;
     top: 64px;
+    right: 0px;
     z-index: 0;
+    padding: 0;
 }
 
 .header__main-illustration {
-  height: 608px;
   width: 765px;
+  height: 608px;
   position: absolute;
+  right: 0px;
   bottom: 0px;
   z-index: 1;
+  padding: 0;
 }
 
-.description {
-  margin: 100px 0px;
-  width: 80%;
-}
-/*p {
-  border: red 2px dashed;
-} */
 .two-columns {
-  min-width: 784px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  margin: 100px;
+  width: 80%;
 }
 
 .two-columns__brief {
+  width: 175px;
   font-size: 18px;
   line-height: 1.2;
   color: #2F80ED;
-  width: 175px;
-  margin-right: 30px;
+  font-weight: normal;
 }
 
 .two-columns__main-text {
-  width: 784px;
-
+  width: 80%;
+  min-width: 784px;
 }
 
 .two-columns__paragraph {
   font-size: 24px;
   line-height: 34px;
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
 }
 
 .digits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.digits__title {
-  width: 60%;
-  line-height: 69px;
-  font-size: 60px;
-  font-style: bold;
-  text-align: center;
-  margin: 0;
-  margin-bottom: 20px;
-}
-
-.digits__subtitle {
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-style: bold;
-  text-align: center;
-  margin: 0;
-  margin-bottom: 60px;
-}
-
-.table {
-  margin: auto;
-  display: table;
-  table-layout: auto;
-}
-
-.table__cell {
-  /*border: red 2px dashed;*/
-  width: 250px;
-  margin: 0 12.5px;
-  padding: 0;
-}
-
-.table__heading {
-  line-height: 1.15;
-  font-size: 24px;
-}
-
-.table__text {
-  line-height: 1.2;
-  font-size: 18px;
-}
-
-.table__top-row {
-  display: flex;
-  flex-direction: row;
-}
-
-.table__bottom-row {
-  display: flex;
-  flex-direction: row;
   margin-bottom: 100px;
 }
 
+.digits-title {
+  font-size: 60px;
+  line-height: 69px;
+  width: 60%;
+  text-align: center;
+  font-weight: bold;
+  margin: 0 auto 20px;
+}
+
+.digits-subtitle {
+  font-size: 24px;
+  line-height: 34px;
+  width: 60%;
+  text-align: center;
+  margin: 0 auto 60px;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  list-style: none;
+}
+
+.table__cell {
+  padding: 5px;
+  z-index: 2;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  margin: 20px 0px;
+}
+
+.table__cell .table_theme_light {
+  width: 250px;
+}
+
+/*.table__text .table_theme_light{
+  font-size: 18px;
+  line-height: 1.2;
+  margin-bottom: 20px;
+}*/
+
+
 .feynman {
-  background-color: #F2F2F2;
-  width: 100%;
   height: 890px;
+  background-color: #F2F2F2;
+  position: relative;
 }
 
 .feynman__title {
   width: 775px;
-  margin: auto;
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 70px;
-  line-height: 1.15;
   font-size: 120px;
-  position: absolute;
-  left: 25.5%;
-  top: 2150px;
-  z-index: 10;
+  line-height: 1.15;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 100px;
+  margin-bottom: 70px;
+  position: inherit;
+  z-index: 3;
 }
 
 .feynman__subtitle {
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
+  font-size: 31px;
   line-height: 51px;
-  font-size: 36px;
-  position: absolute;
-  left: 37%;
-  top: 2575px;
-  z-index: 5;
-}
-
-.feynman__more {
-  line-height: 51px;
-  font-size: 36px;
-  text-decoration: none;
-  position: absolute;
-  top: 2600px;
-  right: 48px;
-  color: black;
+  position: inherit;
+  z-index: 2;
 }
 
 .feynman__image {
-  width: 867px;
-  height: 637px;
   position: absolute;
-  left: 80px;
-  top: 2400px;
+  bottom: 0;
+  left: 0;
   z-index: 1;
 }
 
+.feynman__more {
+  font-size: 36px;
+  line-height: 51px;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  color: black;
+}
+
+.kaufman {
+  position: relative;
+  z-index: 1;
+  background-color: #1F1F1F;
+  margin: 0 auto;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -475px;
+  z-index: 1;
+  transform: rotateY(180deg);
+}
+
+.kaufman-title {
+  color: white;
+  font-size: 60px;
+  line-height: 69px;
+  width: 60%;
+  margin: 90px auto 20px;
+  text-align: center;
+}
+
+.kaufman-subtitle {
+  color: white;
+  font-size: 24px;
+  line-height: 34px;
+  width: 60%;
+  margin: 0 auto 80px;
+  text-align: center;
+}
+
+.table__cell .table_theme_dark {
+  width: 200px;
+  color: white;
+}
+
+
+.footer {
+  position: relative;
+  background-color: #1F1F1F;
+  min-height: 350px;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-basis: 711px;
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 60px;
+  color: white;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__column_content_copyright {
+  justify-content: space-between;
+  list-style: none;
+}
+
+.footer__author {
+  margin-bottom: 16px;
+}
+
+.footer__column_content_info {
+  list-style: none;
+}
+
+.footer__header {
+  font-size: 18px;
+  line-height: 45px;
+  font-weight: bold;
+  margin: 0 0 20px;
+}
+
+.column-text {
+  font-size: 18px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__column_content_social {
+  list-style: none;
+}
+
+.column-text_link {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
+}
 
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
