--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@
     background-color: #F2F2F2;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin: 0;
     position: relative;
     overflow: hidden;
@@ -30,8 +31,9 @@
 .logo_place_header {
   width: 154px;
   height: 31px;
-  margin-top: 30px;
-  margin-left: 64px;
+  position: absolute;
+  left: 64px;
+  top: 30px;
 }
 
 .header__title {
@@ -49,19 +51,16 @@
   line-height: 25px;
   font-size: 18px;
   position: absolute;
-  bottom: 30px;
+  bottom: 10px;
+  left: 64px;
   z-index: 2;
-  margin-left: 64px;
 }
 
 .header__link {
   text-decoration: none;
   color: #2F80ED;
-  line-height: 25px;
-  font-size: 18px;
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
     height: 568px;
     width: 568px;
@@ -86,7 +85,7 @@
 .two-columns {
   display: flex;
   justify-content: space-between;
-  margin: 100px;
+  margin: 100px auto;
   width: 80%;
 }
 
@@ -96,6 +95,7 @@
   line-height: 1.2;
   color: #2F80ED;
   font-weight: normal;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -106,11 +106,16 @@
 .two-columns__paragraph {
   font-size: 24px;
   line-height: 34px;
-  margin-bottom: 30px;
+  margin: 0 0 30px;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
 }
 
 .two-columns__span-accent {
   font-weight: bold;
+  margin: 0;
 }
 
 .digits {
@@ -140,6 +145,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0;
   list-style: none;
 }
 
@@ -218,18 +224,22 @@
 
 .kaufman__triangle {
   position: absolute;
-  right: -450px;
+  right: -210px;
   z-index: 1;
-  transform: rotateY(180deg);
+  height: 877px;
+  width: 877px;
 }
 
 .kaufman-title {
   color: white;
   font-size: 60px;
   line-height: 69px;
+  font-weight: bold;
   width: 60%;
   margin: 90px auto 20px;
   text-align: center;
+  position: inherit;
+  z-index: 3;
 }
 
 .kaufman-subtitle {
@@ -239,25 +249,31 @@
   width: 60%;
   margin: 0 auto;
   text-align: center;
+  position: inherit;
+  z-index: 4;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   margin-right: 0;
-  margin-top: 80px;
-  z-index: 2;
+  z-index: 5;
   color: white;
+  margin: 80px 0 0;
 }
 
 .table__heading_theme_dark {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin: 0 0 20px;
+  z-index: 6;
 }
 
 .table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
+  z-index: 7;
+  margin: 0;
 }
 
 /* Footer */
@@ -276,7 +292,7 @@
   position: relative;
   width: 90%;
   margin: 0 auto;
-  padding-top: 60px;
+  padding: 60px 0 40px;
   color: white;
 }
 
@@ -294,14 +310,19 @@
 
 .logo_place_footer {
   background-size: contain;
+  height: 35px;
+  width: 185px;
 }
 
 .footer__author {
-  margin-bottom: 16px;
+  position: absolute;
+  align-self: flex-end;
 }
 
 .footer__column_content_info {
   list-style: none;
+  position: absolute;
+  right: 300px;
 }
 
 .footer__header {
@@ -316,6 +337,7 @@
   line-height: 30px;
   margin: 0;
   padding: 0;
+  color: #F2F2F2;
 }
 
 .footer__column_content_social {
