--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,3 @@
-.body {
-  margin: 0;
-}
 
 .page {
     min-width: 1100px;
@@ -40,7 +37,7 @@
   width: 730px;
   font-size: 102px;
   line-height: 96px;
-  z-index: 4;
+  z-index: 2;
   margin-left: 64px;
   font-weight: bold;
 }
@@ -51,9 +48,10 @@
   line-height: 25px;
   font-size: 18px;
   position: absolute;
-  bottom: 10px;
+  bottom: 30px;
   left: 64px;
   z-index: 2;
+  margin: 0;
 }
 
 .header__link {
@@ -69,19 +67,19 @@
     top: 64px;
     right: 0px;
     z-index: 0;
-    padding: 0;
 }
 
 .header__main-illustration {
   width: 765px;
   height: 608px;
   position: absolute;
-  right: 0px;
+  right: 0;
+  bottom: 0;
   bottom: 0px;
   z-index: 1;
-  padding: 0;
 }
 
+/* Two Columns */
 .two-columns {
   display: flex;
   justify-content: space-between;
@@ -118,11 +116,13 @@
   margin: 0;
 }
 
+/* Digits*/
+
 .digits {
   margin-bottom: 100px;
 }
 
-.digits-title {
+.section-title {
   font-size: 60px;
   line-height: 69px;
   width: 60%;
@@ -131,7 +131,7 @@
   margin: 0 auto 20px;
 }
 
-.digits-subtitle {
+.section-subtitle {
   font-size: 24px;
   line-height: 34px;
   width: 60%;
@@ -149,20 +149,22 @@
   list-style: none;
 }
 
-.table__cell_theme_light {
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
 
-.table__heading_theme_light {
+.table__heading {
   font-size: 24px;
   line-height: 1.15;
   font-weight: bold;
+  margin: 0;
 }
 
-.table__text_theme_light {
+.table__text {
   font-size: 18px;
   line-height: 1.2;
+  margin: 20px 0 0;
 }
 
 /* Feynman */
@@ -181,7 +183,6 @@
   margin: 0 auto;
   padding-top: 100px;
   margin-bottom: 70px;
-  position: inherit;
   z-index: 3;
 }
 
@@ -190,7 +191,6 @@
   text-align: center;
   font-size: 31px;
   line-height: 51px;
-  position: inherit;
   z-index: 2;
 }
 
@@ -201,7 +201,7 @@
   z-index: 1;
 }
 
-.feynman__more {
+.feynman__link {
   font-size: 36px;
   line-height: 51px;
   position: absolute;
@@ -225,7 +225,11 @@
 .kaufman__triangle {
   position: absolute;
   right: -210px;
-  z-index: 1;
+  top: 0;
+  z-index: 2;
+  background-image: url("../images/triangle.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
   height: 877px;
   width: 877px;
 }
@@ -238,25 +242,29 @@
   width: 60%;
   margin: 90px auto 20px;
   text-align: center;
-  position: inherit;
+  z-index: 3;
+}
+.title_dark {
+  color: white;
+  margin: 90px auto 20px;
   z-index: 3;
 }
 
-.kaufman-subtitle {
+.section-subtitle {
   color: white;
   font-size: 24px;
   line-height: 34px;
+  font-weight: normal;
   width: 60%;
   margin: 0 auto;
   text-align: center;
-  position: inherit;
-  z-index: 4;
+  z-index: 3;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   margin-right: 0;
-  z-index: 5;
+  z-index: 3;
   color: white;
   margin: 80px 0 0;
 }
@@ -266,13 +274,13 @@
   font-size: 24px;
   font-weight: bold;
   margin: 0 0 20px;
-  z-index: 6;
+  z-index: 3;
 }
 
 .table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
-  z-index: 7;
+  z-index: 3;
   margin: 0;
 }
 
@@ -306,10 +314,10 @@
 .footer__column_content_copyright {
   justify-content: space-between;
   list-style: none;
+  width: 50%;
 }
 
 .logo_place_footer {
-  background-size: contain;
   height: 35px;
   width: 185px;
 }
@@ -317,12 +325,16 @@
 .footer__author {
   position: absolute;
   align-self: flex-end;
+  left: 0;
+  bottom: 0;
+  margin: 18px 0;
 }
 
 .footer__column_content_info {
   list-style: none;
-  position: absolute;
-  right: 300px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .footer__header {
@@ -340,11 +352,22 @@
   color: #F2F2F2;
 }
 
-.footer__column_content_social {
-  list-style: none;
+.column-links {
+  font-size: 18px;
+  line-height: 30px;
+  margin: 0;
+  padding: 0;
+  color: #F2F2F2;
+  text-decoration: none;
 }
 
-.column-text_link {
+.footer__column_content_social {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__social-link {
   color: white;
   text-decoration: none;
   font-size: 18px;
