--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -7,7 +7,7 @@
 @import url(./__subtitle/feynman__subtitle.css);
 
 .feynman {
-  height: 890px;
+  min-height: 790px;
   background-color: #F2F2F2;
   position: relative;
 }
