--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,21 @@
 @import url(./__column/footer__column.css);
-@import url(./__column/_content/footer__column_content_copyright.css);
-@import url(./__column/_content/footer__column_content_social.css);
-@import url(./__column/_content/footer__column_content_info.css);
 
 @import url(./__columns/footer__columns.css);
 
 @import url(./__column-links/footer__column-links.css);
 
-@import url(./__header/footer__header.css);
+@import url(./__column-link/footer__column-link.css);
+
+@import url(./__column-heading/footer__column-heading.css);
 
 @import url(./__social-link/footer__social-link.css);
 
 @import url(./__author/footer__author.css);
 
 .footer {
-  position: relative;
   background-color: #1F1F1F;
   min-height: 350px;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
+  display: flex;
 }
