--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,9 @@
 .header__link {
   text-decoration: none;
   color: #2F80ED;
+  transition: opacity 2s;
+}
+
+.header__link:hover {
+  opacity: 60%;
 }
