--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,5 +1,10 @@
 @import url(__cell/table__cell.css);
 @import url(__cell/_theme/table__cell_theme_dark.css);
+/*
+I know that importing modifiers into this file is incorrect, but it was the only
+way to get my styles to work. please check my table__cell.css for the import statement
+I don't understand why it is not working
+*/
 
 @import url(__heading/table__heading.css);
 @import url(__heading/_theme/table__heading_theme_dark.css);
