--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,9 @@
 @import url("../vendor/normalize.css");
-
 @import url("../blocks/logo/logo.css");
-
+@import url("../blocks/rotation/rotation.css");
 @import url("../blocks/header/header.css");
-
+@import url("../blocks/section-title/section-title.css");
+@import url("../blocks/section-subtitle/section-subtitle.css");
 @import url("../blocks/digits/digits.css");
 @import url("../blocks/two-columns/two-columns.css");
 @import url("../blocks/table/table.css");
